--- a/index.html
+++ b/index.html
@@ -54,20 +54,62 @@
     <h2><span class="underline-magical-sub-header">Projects</span></h2>
     <p>
       I have worked on a variety of projects and have a part in researching and developing new processes, enhancing productivity
-      and efficiency of manufacturing line, prototyping new devices, advanced data analysis, optimizing products, 
-      automating manuaul operations, design & fabrication of an ATV. 
+      and efficiency of the manufacturing lines, prototyping new devices, advanced data analysis, optimizing products, 
+      automating manual operations, design & fabrication of an ATV. 
     </p>
   </div>
 
   <div class="prjt">
     <div class="sub-project">
       <a href="Project1.html" target="_self">
-        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project">
+        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project1">
         <h3 class="card-title">3D Scanner for Medical Applications</h3>
         <p class="card-subtitle">DESIGN . PROTOTYPING</p>
       </a>
     </div>
-  
+  <div class="sub-project">
+      <a href="Project2.html" target="_self">
+        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project2">
+        <h3 class="card-title">Fault Detection & Prediction using Machine Learning</h3>
+        <p class="card-subtitle">DATA ANALYSIS . PREDICTIVE MAINTAINANCE</p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="Project3.html" target="_self">
+        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project3">
+        <h3 class="card-title">Programmable Logic Controllers for Automating Industrial Equipment </h3>
+        <p class="card-subtitle">PLC . AUTOMATION</p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="Project4.html" target="_self">
+        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project4">
+        <h3 class="card-title">Process Visaulization with Human Machine Interfaces</h3>
+        <p class="card-subtitle">HMI . SCADA</p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="Project5.html" target="_self">
+        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project5">
+        <h3 class="card-title">Modelling, Simulating & Optimizing FSAE Chassis</h3>
+        <p class="card-subtitle">DESIGN . FEA . OPTIMIZATION</p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="Project6.html" target="_self">
+        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project6">
+        <h3 class="card-title">Negative Poisson Ration Structure using Lithography</h3>
+        <p class="card-subtitle">AUXETICS . SOFT LITHOGRAPHY</p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="Project7.html" target="_self">
+        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project7">
+        <h3 class="card-title">Baja SAE ATV Challenge</h3>
+        <p class="card-subtitle">DESIGN . FABRICATION</p>
+      </a>
+    </div>
+    
   </div>
   </div>
     <!-- Projects Section ENDS -->
