--- a/index.html
+++ b/index.html
@@ -69,47 +69,53 @@
     </div>
   <div class="sub-project">
       <a href="Project2.html" target="_self">
-        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project2">
+        <img src="./images/asmitjainMachineLearning.png" class="project-image" alt="Image of my project2">
         <h3 class="card-title">Fault Detection & Prediction using Machine Learning</h3>
         <p class="card-subtitle">DATA ANALYSIS . PREDICTIVE MAINTAINANCE</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="Project3.html" target="_self">
-        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project3">
+        <img src="./images/asmitjainPLC.png" class="project-image" alt="Image of my project3">
         <h3 class="card-title">Programmable Logic Controllers for Automating Industrial Equipment </h3>
         <p class="card-subtitle">PLC . AUTOMATION</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="Project4.html" target="_self">
-        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project4">
+        <img src="./images/asmitjainHMI.png" class="project-image" alt="Image of my project4">
         <h3 class="card-title">Process Visaulization with Human Machine Interfaces</h3>
         <p class="card-subtitle">HMI . SCADA</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="Project5.html" target="_self">
-        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project5">
+        <img src="./images/asmitjainFSAE.png" class="project-image" alt="Image of my project5">
         <h3 class="card-title">Modelling, Simulating & Optimizing FSAE Chassis</h3>
         <p class="card-subtitle">DESIGN . FEA . OPTIMIZATION</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="Project6.html" target="_self">
-        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project6">
+        <img src="./images/asmitjainNPR.png" class="project-image" alt="Image of my project6">
         <h3 class="card-title">Negative Poisson Ration Structure using Lithography</h3>
         <p class="card-subtitle">AUXETICS . SOFT LITHOGRAPHY</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="Project7.html" target="_self">
-        <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project7">
+        <img src="./images/asmitjainATV.png" class="project-image" alt="Image of my project7">
         <h3 class="card-title">Baja SAE ATV Challenge</h3>
         <p class="card-subtitle">DESIGN . FABRICATION</p>
       </a>
     </div>
-    
+    <div class="sub-project">
+      <a href="Project8.html" target="_self">
+        <img src="./images/asmitjainProjects.png" class="project-image" alt="Image of my other projects">
+        <h3 class="card-title">Other Projects</h3>
+        <p class="card-subtitle">MULTIPLE PROJECTS</p>
+      </a>
+    </div>
   </div>
   </div>
     <!-- Projects Section ENDS -->
