--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
     </div>
     <div class="sub-project">
       <a href="Project7.html" target="_self">
-        <img src="./images/asmitjainATV.png" class="project-image" alt="Image of my project7">
+        <img src="./images/asmitjainATV.jpeg" class="project-image" alt="Image of my project7">
         <h3 class="card-title">Baja SAE ATV Challenge</h3>
         <p class="card-subtitle">DESIGN . FABRICATION</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="Project8.html" target="_self">
-        <img src="./images/asmitjainProjects.png" class="project-image" alt="Image of my other projects">
+        <img src="./images/asmitjainProjects.jpeg" class="project-image" alt="Image of my other projects">
         <h3 class="card-title">Other Projects</h3>
         <p class="card-subtitle">MULTIPLE PROJECTS</p>
       </a>
