--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
     <div class="sub-project">
       <a href="Project8.html" target="_self">
-        <img src="./images/asmitjainProjects.jpeg" class="project-image" alt="Image of my other projects">
+        <img src="./images/asmitjainProjects.jpg" class="project-image" alt="Image of my other projects">
         <h3 class="card-title">Other Projects</h3>
         <p class="card-subtitle">MULTIPLE PROJECTS</p>
       </a>
@@ -123,7 +123,7 @@
   <!-- About Section BEGINS -->
   <div class="about" id="about">
     <h2><span class="underline-magical-sub-header">About</span></h2>
-    <img src="./images/asmitjainProfile.jpeg" alt="It's me, Asmit">
+    <img src="./images/asmitjainProfile.jpg" alt="It's me, Asmit">
     <div class="about-grid">
 
 
