--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
     <div class="sub-project">
       <a href="Project7.html" target="_self">
-        <img src="./images/asmitjainATV.jpeg" class="project-image" alt="Image of my project7">
+        <img src="./images/asmitjainATV.jpg" class="project-image" alt="Image of my project7">
         <h3 class="card-title">Baja SAE ATV Challenge</h3>
         <p class="card-subtitle">DESIGN . FABRICATION</p>
       </a>
