--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <!-- About Section BEGINS -->
   <div class="about" id="about">
     <h2><span class="underline-magical-sub-header">About</span></h2>
-    <img src="./images/asmitjainProfile.jpg" alt="It's me, Asmit">
+    <img src="./images/asmitjainProfile.jpeg" alt="It's me, Asmit">
     <div class="about-grid">
 
 
