--- a/Project1.html
+++ b/Project1.html
@@ -28,9 +28,9 @@
   
   
   <!-- Project1 Section BEGINS -->
-    <div class="projects" id="projects">
+    <div class="project-design" id="project-design">
       <h2><span class="underline-magical-sub-header">Project 1</span></h2>
-      <div class="projects-grid">
+      <div class="project-grid">
 
       <p> Designing, Prototyping & Validating a Digital Motor Controlled 3D Scanner for Macroscopic Medical Application</p>
       <img src="./images/asmitjainSCANNER.jpg" alt="My 3D Scanning Device">
@@ -70,11 +70,11 @@
         broader field known as biostereometrics, has had varying popularity over the past one hundred and fifty years due to 
         the many problems encountered during practical applications.</h4>
         
-        <img src="./images/asmitjainSCANNER.png" alt="Photogramettry">
-        <img src="./images/asmitjain3DSCANNER1.png" alt="Photogramettry">
-        <img src="./images/asmitjain3DSCANNER2.png" alt="Photogramettry">
-        <img src="./images/asmitjain3DSCANNER3.png" alt="Photogramettry">
-        <img src="./images/asmitjain3DSCANNER4.png" alt="Photogramettry">
+        <img src="./images/asmitjainSCANNER.png" alt="Photogramettry" class="center">
+        <img src="./images/asmitjain3DSCANNER1.png" alt="Photogramettry" class="center">
+        <img src="./images/asmitjain3DSCANNER2.png" alt="Photogramettry" class="center">
+        <img src="./images/asmitjain3DSCANNER3.png" alt="Photogramettry" class="center">
+        <img src="./images/asmitjain3DSCANNER4.png" alt="Photogramettry" class="center">
       <br>
       <br>
       <br>
