--- a/Project1.html
+++ b/Project1.html
@@ -19,7 +19,7 @@
   <div id="sticky-header">
     <div class="top-navigation">
       <span><a href="index.html">ASMIT JAIN</a></span>
-      <span><a href="index.html#projects">PROJECTS</a></span>
+      <span><a href="index.html#project-design">PROJECTS</a></span>
       <span><a href="index.html#about">ABOUT</a></span>
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
      </div>
@@ -77,7 +77,8 @@
         <img src="./images/asmitjain3DSCANNER1.png" alt="Photogramettry" class="center">
         <img src="./images/asmitjain3DSCANNER2.png" alt="Photogramettry" class="center">
         <br>
-        I started this project by making a few CAD models using SolidWorks. There are two pictures attached with an isometric view and a
+        
+        <p>I started this project by making a few CAD models using SolidWorks. There are two pictures attached with an isometric view and a
         side view. The model contains an arm which hold a camera unit. The arm is mounted on a mechanical stage (PI U-651) which rotates the camera
         in 360 degree. This mechanical stage is connected to a breadboad which keeps the setup stable. To avoid floor vibrations and noise,
         we mounted all these components on a TMC Optical Table. 
@@ -97,7 +98,7 @@
         of the optical unit. Some trials were taken to check the effects of the spring on an uneven surface. The caster ball supports 
         the heavy optical unit very well without bending the arm.
         <br>
-        Work is still in progress. Please stay tuned for some sample images taken by this setup.
+          Work is still in progress. Please stay tuned for some sample images taken by this setup.</p>
       <br>
     </div>
    <!-- Project1 Section ENDS -->
