--- a/Project1.html
+++ b/Project1.html
@@ -77,15 +77,41 @@
         <img src="./images/asmitjain3DSCANNER1.png" alt="Photogramettry" class="center">
         <img src="./images/asmitjain3DSCANNER2.png" alt="Photogramettry" class="center">
         <br>
-        
-        <p>I started this project by making a few CAD models using SolidWorks. There are two pictures attached with an isometric view and a
-        side view. The model contains an arm which hold a camera unit. The arm is mounted on a mechanical stage (PI U-651) which rotates the camera
-        in 360 degree. This mechanical stage is connected to a breadboad which keeps the setup stable. To avoid floor vibrations and noise,
-        we mounted all these components on a TMC Optical Table. 
+        <p>
+        <b><i> EQUIPMENT</i></b>
         <br>
-        A Basler ACE A2040 camera unit with Mitutoyo 20x infinite corrected objective lens was used which were mounted on a 3D printed arm.
-        Several design iterations were made for the 3D printed part based on the external forces. I also did some FEA analysis using ANSYS.
+        1. Optical Bench: To make a prototype, I used a sturdy base which could hold all the equipment at its place and would 
+           provide robust support without generating the effects of floor vibrations. These unwanted noise and signals would affect 
+           the quality of the images in this study.
         <br>
+        A TMC optical bench, an advanced building floor vibration isolation systems, was used. It has pneumatic air vibration 
+          isolators which helps to reduce the floor vibration signal from our captured images. A customized granite table was 
+          also installed to make a rigid support for the remaining devices.
+          <br>
+        2. Rotational Stage: Once we have the optical bench, we can mount the rotational stage with the help of a breadboard. 
+          A rotational stage is a component which is used to rotate an object with a very precise angle.For this study, we used 
+          physikinstrumente (PI) U-651 rotational stage with the low profile design. It has a unique feature to position 
+          large loads with precision. The ultimate rotation range is more than 360 degree. The drive torque of this device is 0.3Nm 
+          in both the directions of rotation. 
+          <br>
+       3. Camera Unit: The next step in building a prototype would be to focus on the camera unit. The camera unit basically 
+          consists of a camera attached to the objective lens. Both these units are connected with a connector.
+For this study, a camera from Basler, ACE A2040, with 3.2 MP resolution was used with 120 frames per second. It has a CMOS sensor. This is a 
+          very small, affordable and highly productive camera. This unit helps for the image processing applications. It is a mono 
+          color camera. We need an additional device to connect this with a lens. We used an adapter which can hold an objective lens.
+        <br>
+      4. Objective Lens:The objective lenses are the optical elements closest to the specimen. It gathers light from the specimen, 
+         which is focused to produce the real image. Mitutoyo’s objectives, 20x infinity corrected lens,  makes the objectives larger
+         and longer (95mm parfocalization length). In order to maintain as high an N.A. and contrast as possible, the lenses are all
+         Plano Apochromats. The magnification is 20x and the focal length is 10mm. The resolving power for this lens is 0.7 micron
+         with a focus depth of 1.6 micron.    
+       <br>
+     5. 3D Printed Parts: Once we have gathered all the equipment, we can build some components using 3D printing technology. 
+          The purpose of choosing 3D printing is the ease of manufacturability. We can get printed parts in a less turnaround time. 
+          We will see in the later section about how we can use 3D printing to get parts for this scanner prototype.
+       <br>
+         <img src="./images/asmitjainP1_Setup1.png" alt="Photogramettry" class="center"> 
+          <br>
         <img src="./images/asmitjain3DSCANNER3.png" alt="Photogramettry" class="center">
         <br>
         Later, some modifications were made in the camera mounting clamps for robust design. 
