--- a/Project1.html
+++ b/Project1.html
@@ -198,7 +198,7 @@ A new arm was designed which was much lighter than the previous arm. The section
         of the optical unit. Some trials were taken to check the effects of the spring on an uneven surface. The caster ball supports 
         the heavy optical unit very well without bending the arm.
         <br>
-           <img src="./images/asmitjainP1_Setup4.jpeg" alt="Photogramettry" class="center">
+           <img src="./images/asmitjainP1_Setup4.jpg" alt="Photogramettry" class="center">
           <br>
           <br>
           Later, a lighting device was also installed. Work for capturing the images is still in progress. Please stay tuned for some sample images taken by this setup.</p>
