--- a/Project1.html
+++ b/Project1.html
@@ -77,7 +77,7 @@
         <p>
         <b><i> EQUIPMENT</i></b>
         <br>
-         <img src="./images/asmitjainP1_Setup1.png" alt="Photogramettry" class="center"> 
+         <img src="./images/asmitjainP1_Setup1.PNG" alt="Photogramettry" class="center"> 
           <br>
         1. Optical Bench: To make a prototype, I used a sturdy base which could hold all the equipment at its place and would 
            provide robust support without generating the effects of floor vibrations. These unwanted noise and signals would affect 
@@ -126,7 +126,7 @@
           
           <br>
           <br>
-          <img src="./images/asmitjainP1_Setup2.png" alt="Photogramettry" class="center">
+          <img src="./images/asmitjainP1_Setup2.PNG" alt="Photogramettry" class="center">
           <br>
           Design Proposal 2: In the previous design, we observed that a few things were missing which would have helped us to get a desired output. 
           So, for the next design iteration, we incorporated a caster ball mechanism with a spring to support the mass of the
@@ -164,7 +164,7 @@ A new arm was designed which was much lighter than the previous arm. The section
           of the caster ball in just one direction.
           <br>
           <br>
-          <img src="./images/asmitjainP1_Setup3.png" alt="Photogramettry" class="center">
+          <img src="./images/asmitjainP1_Setup3.PNG" alt="Photogramettry" class="center">
         <br>
         Some analysis was also performed to validate the design. ANSYS Workbench was used to calculate the total deformation 
         when the optical unit is placed on to the arm with the help of the slider.
