--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
     <div class="sub-project">
       <a href="Project3.html" target="_self">
         <img src="./images/asmitjainPLC.png" class="project-image" alt="Image of my project3">
-        <h3 class="card-title">Programmable Logic Controllers for Automating Industrial Equipment </h3>
-        <p class="card-subtitle">PLC . AUTOMATION</p>
+        <h3 class="card-title">PLC Programming for Automating Industrial Equipment </h3>
+        <p class="card-subtitle">PROGRAMMABLE LOGIC CONTROLLER . AUTOMATION</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="Project4.html" target="_self">
         <img src="./images/asmitjainHMI.png" class="project-image" alt="Image of my project4">
-        <h3 class="card-title">Process Visaulization with Human Machine Interfaces</h3>
-        <p class="card-subtitle">HMI . SCADA</p>
+        <h3 class="card-title">Process Visaulization with HMI/SCADA</h3>
+        <p class="card-subtitle">HUMAN MACHINE INTERFACES</p>
       </a>
     </div>
     <div class="sub-project">
@@ -130,13 +130,14 @@
       <p>
         I am a Mechanical Engineer from the University of Massachusetts, Amherst. I recently completed my Master of Science (MS)
         degree from the College of Engineering in May 2019. I am currently working as an Additive Manufacturing & Design Engineer 
-        at ADDFab Lab in Life Sciences Laboratories.</p>
-        <p>I have a prior industry experience of over two years and research experience of over a year at top-notch labs in UMass. 
+        at ADDFab Lab in Life Sciences Laboratories.
+        <br>
+        I have a prior industry experience of over two years and research experience of over a year at top-notch labs in UMass. 
         During my engineering career, I have worked on a variety of projects and have played a part in researching and developing
         new technologies, product quality improvements, cost reductions efforts for products, efficiency and productivity enhancement,
         and developing strong business relations with the customers, vendors and suppliers. 
-        </p>
-        <p>I have honed my skills in Product and Process Design & Development, CAD modeling, Advanced Manufacturing and Rapid Prototyping
+        <br>
+        I have honed my skills in Product and Process Design & Development, CAD modeling, Advanced Manufacturing and Rapid Prototyping
         techniques like Additive Manufacturing, which is known as 3D Printing, Lean Six Sigma, Advanced Data Analysis, and a few skills
         of industrial automation like PLC & HMI/SCADA Systems. I believe that all the industrial experiences coupled with my academics
         have helped me to augment my project management, problem-solving, communication skills, and collaborative skills in the
