--- a/Project1.html
+++ b/Project1.html
@@ -210,7 +210,11 @@
         <br>
         Later, a lighting device was also installed. Work for capturing the images is still in progress. Please stay tuned for some sample images taken by this setup.</p>
         <br>
-        </div>
+          <br>
+          
+          <button type="button" class="button" onclick="window.open('https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view','_blank');" alt="Link to Project Report 1">Project Report</button>
+      <br>  
+      </div>
    <!-- Project1 Section ENDS -->
       
 <!-- External links Section BEGINS -->
