--- a/Project1.html
+++ b/Project1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Asmit Jain's Portfolio</title>
+  <title>Asmit Jain's Project 1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet">
