--- a/Project5.html
+++ b/Project5.html
@@ -304,7 +304,7 @@ is of utmost importance.
       <br>
 <img src="./images/asmitjainP5_18.PNG" alt="FSAE" class="center">
 <br>  
-      br>
+      <br>
 <img src="./images/asmitjainP5_19.PNG" alt="FSAE" class="center">
 <br>  
         <br>
@@ -317,7 +317,7 @@ is of utmost importance.
         <br>
 <img src="./images/asmitjainP5_20.PNG" alt="FSAE" class="center">
 <br>  
-      br>
+      <br>
 <img src="./images/asmitjainP5_21.PNG" alt="FSAE" class="center">
 <br>  
         <br>
@@ -341,7 +341,12 @@ is of utmost importance.
         the forces induced are trying to pull the diagonal from each end. The stiffness of this member acting in tension is higher 
         than the compared to the stiffness of the sides of the rectangular structure in bending. All the results of optimization can
         be seen below.
-        
+        <br>
+        <img src="./images/asmitjainP5_22.PNG" alt="FSAE" class="center">
+        <br>  
+        <br>
+        <img src="./images/asmitjainP5_23.PNG" alt="FSAE" class="center">
+        <br>  
         
       </p>
       </div>
