--- a/Project5.html
+++ b/Project5.html
@@ -302,10 +302,10 @@ is of utmost importance.
         conditions and deformation from the global model to the sub-model “cut boundaries” and solves for local stress states in
         that region.
       <br>
-<img src="./images/asmitjainP5_18.PNG" alt="FSAE" class="center">
+<img src="./images/asmitjainP5_18.png" alt="FSAE" class="center">
 <br>  
       <br>
-<img src="./images/asmitjainP5_19.PNG" alt="FSAE" class="center">
+<img src="./images/asmitjainP5_19.png" alt="FSAE" class="center">
 <br>  
         <br>
         After the sub-model is ready, we need to make a new static structural analysis which will perform the analysis on the sub-model.
@@ -315,10 +315,10 @@ is of utmost importance.
         can be seen in Figure 10. This study focuses on sub modelling a specific part. It can be performed on any part in the 
         same manner.
         <br>
-<img src="./images/asmitjainP5_20.PNG" alt="FSAE" class="center">
+<img src="./images/asmitjainP5_20.png" alt="FSAE" class="center">
 <br>  
       <br>
-<img src="./images/asmitjainP5_21.PNG" alt="FSAE" class="center">
+<img src="./images/asmitjainP5_21.png" alt="FSAE" class="center">
 <br>  
         <br>
         
