--- a/Project6.html
+++ b/Project6.html
@@ -33,7 +33,7 @@
         <div class="project-grid">
         <br>
         <br>
-      <h2> Fabrication of Negative </h2>
+      <h2> Fabrication of Negative Poissons Ratio Structure using Lithography </h2>
         <br>
     <br>
     <img src="./images/asmitjainP6_1.jpg" alt="FSAE" class="center">
