--- a/Project7.html
+++ b/Project7.html
@@ -36,7 +36,7 @@
       <h2> BAJA SAE INDIA 2014 & 2015 </h2>
     <br>
     <br>
-    <img src="./images/asmitjainP7_1.png" alt="BAJA" class="center">
+    <img src="./images/asmitjainP7_1.PNG" alt="BAJA" class="center">
         <br>
       <p><b><i> SAE OVERVIEW:</i></b>
         <br>
@@ -78,30 +78,30 @@ able to negotiate rough terrains in all weather conditions without damage.
 <br>
 <br>
  This site is under construction! Stay tuned for more updates. In the meantime, enjoy some pictures posted below.
-    <img src="./images/asmitjainP7_2.png" alt="FSAE" class="center">
+    <img src="./images/asmitjainP7_2.PNG" alt="FSAE" class="center">
         <br>
-        <img src="./images/asmitjainP7_3.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_4.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_5.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_6.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_7.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_8.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_9.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_10.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_11.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_12.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_13.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_14.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_15.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_16.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_17.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_18.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_19.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_20.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_21.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_22.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_23.png" alt="FSAE" class="center">
-        <br><img src="./images/asmitjainP7_24.png" alt="FSAE" class="center">
+        <img src="./images/asmitjainP7_3.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_4.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_5.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_6.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_7.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_8.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_9.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_10.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_11.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_12.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_13.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_14.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_15.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_16.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_17.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_18.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_19.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_20.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_21.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_22.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_23.PNG" alt="FSAE" class="center">
+        <br><img src="./images/asmitjainP7_24.PNG" alt="FSAE" class="center">
         <br>
         <br>
                     
