--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="top-navigation">
       <span><a href="index.html">ASMIT JAIN</a></span>
       <span><a href="#project-design">PROJECTS</a></span>
+      <span><a href="#project-design">WORK EXPERIENCE</a></span>
       <span><a href="#about">ABOUT</a></span>
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
       </div>
@@ -129,6 +130,63 @@
   </div>
   </div>
     <!-- Projects Section ENDS -->
+  
+  <!-- Work Experience Section BEGINS -->
+  <div class="project-design" id="project-design">
+    <h2><span class="underline-magical-sub-header">Work Experience</span></h2>
+    <p>
+      I have worked at three different automotive companies combining my internship/ full-time roles. These roles were mostly related to
+      design & manufacturing domain where I got opportunities to work in Cross-Functional Teams. Additionally, I have worked at top-notch
+      Research & Development labs at UMass Amherst. I worked on a variety of projects and developed some amazing technical skills in multiple domains. 
+    </p>
+  </div>
+
+  <div class="prjt">
+    <div class="sub-project">
+      <a href="ADDFab.html" target="_self">
+        <img src="./images/asmitjain.jpg" class="project-image" alt="ADDFab">
+        <h3 class="card-title">Additive Manufacturing & Design Engineer</h3>
+        <p class="card-subtitle">ADDFab Lab - UMass Amherst</p>
+      </a>
+    </div>
+  <div class="sub-project">
+      <a href="ISLab.html" target="_self">
+        <img src="./images/asmitjain.png" class="project-image" alt="ISLab">
+        <h3 class="card-title">Research Assistant</h3>
+        <p class="card-subtitle">Intelligent Sensing Lab - UMass Amherst</p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="VECV.html" target="_self">
+        <img src="./images/asmitjain.png" class="project-image" alt="VECV">
+        <h3 class="card-title">Technical Services Intern </h3>
+        <p class="card-subtitle">Volvo - Eicher Commercial Vehicles</p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="MAN1.html" target="_self">
+        <img src="./images/asmitjain.png" class="project-image" alt="MAN1">
+        <h3 class="card-title">Production Management Intern</h3>
+        <p class="card-subtitle">MAN Trucks</p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="MAHLE.html" target="_self">
+        <img src="./images/asmitjain.png" class="project-image" alt="MAHLE">
+        <h3 class="card-title">Engineer</h3>
+        <p class="card-subtitle">MAHLE Engine Components</p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="MAN2.html" target="_self">
+        <img src="./images/asmitjain.png" class="project-image" alt="MAN2">
+        <h3 class="card-title">Maintenance Engineer Intern</h3>
+        <p class="card-subtitle">MAN Trucks</p>
+      </a>
+    </div>
+    </div>
+  </div>
+    <!-- Work Experience Section ENDS -->
    
   <!-- About Section BEGINS -->
   <div class="about" id="about">
