--- a/index.html
+++ b/index.html
@@ -144,42 +144,42 @@
   <div class="prjt">
     <div class="sub-project">
       <a href="ADDFab.html" target="_self">
-        <img src="./images/asmitjain.jpg" class="project-image" alt="ADDFab">
+        <img src="./images/asmitjainADDFabthumbnail.jpg" class="project-image" alt="ADDFab">
         <h3 class="card-title">Additive Manufacturing & Design Engineer</h3>
         <p class="card-subtitle">ADDFab Lab - UMass Amherst</p>
       </a>
     </div>
   <div class="sub-project">
       <a href="ISLab.html" target="_self">
-        <img src="./images/asmitjain.png" class="project-image" alt="ISLab">
+        <img src="./images/asmitjainISLthumbnail.PNG" class="project-image" alt="ISLab">
         <h3 class="card-title">Research Assistant</h3>
         <p class="card-subtitle">Intelligent Sensing Lab - UMass Amherst</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="VECV.html" target="_self">
-        <img src="./images/asmitjain.png" class="project-image" alt="VECV">
+        <img src="./images/asmitjainVECVthumbnail.jpg" class="project-image" alt="VECV">
         <h3 class="card-title">Technical Services Intern </h3>
         <p class="card-subtitle">Volvo - Eicher Commercial Vehicles</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="MAN1.html" target="_self">
-        <img src="./images/asmitjain.png" class="project-image" alt="MAN1">
+        <img src="./images/asmitjainMANthumbnail.jpg" class="project-image" alt="MAN1">
         <h3 class="card-title">Production Management Intern</h3>
         <p class="card-subtitle">MAN Trucks</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="MAHLE.html" target="_self">
-        <img src="./images/asmitjain.png" class="project-image" alt="MAHLE">
+        <img src="./images/asmitjainMAHLEthumbnail.png" class="project-image" alt="MAHLE">
         <h3 class="card-title">Engineer</h3>
         <p class="card-subtitle">MAHLE Engine Components</p>
       </a>
     </div>
     <div class="sub-project">
       <a href="MAN2.html" target="_self">
-        <img src="./images/asmitjain.png" class="project-image" alt="MAN2">
+        <img src="./images/asmitjainMAN2thumbnail.jpg" class="project-image" alt="MAN2">
         <h3 class="card-title">Maintenance Engineer Intern</h3>
         <p class="card-subtitle">MAN Trucks</p>
       </a>
