--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="top-navigation">
       <span><a href="index.html">ASMIT JAIN</a></span>
       <span><a href="#project-design">PROJECTS</a></span>
-      <span><a href="#project-design">WORK EXPERIENCE</a></span>
+      <span><a href="#workexp-design">WORK EXPERIENCE</a></span>
       <span><a href="#about">ABOUT</a></span>
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
       </div>
@@ -132,7 +132,7 @@
     <!-- Projects Section ENDS -->
   
   <!-- Work Experience Section BEGINS -->
-  <div class="project-design" id="project-design">
+  <div class="workexp-design" id="workexp-design">
     <h2><span class="underline-magical-sub-header">Work Experience</span></h2>
     <p>
       I have worked at three different automotive companies combining my internship/ full-time roles. These roles were mostly related to
