--- a/ADDFab.html
+++ b/ADDFab.html
@@ -29,7 +29,7 @@
   
   
   <br>
-  <!-- ADDFab Section BEGINS --><img src="./images/asmitjainP2_1.PNG" alt="Vibration Analysis" class="center">
+  <!-- ADDFab Section BEGINS -->
     <div class="project-design" id="project-design">
       <h2><span class="underline-magical-sub-header">Work Experience 1</span></h2>
         <div class="project-grid">
