--- a/ADDFab.html
+++ b/ADDFab.html
@@ -20,7 +20,7 @@
     <div class="top-navigation">
       <span><a href="index.html">ASMIT JAIN</a></span>
       <span><a href="index.html#project-design">PROJECTS</a></span>
-      <span><a href="#workexp-design">WORK EXPERIENCE</a></span>
+      <span><a href="index.html#workexp-design">WORK EXPERIENCE</a></span>
       <span><a href="index.html#about">ABOUT</a></span>
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
      </div>
