--- a/ADDFab.html
+++ b/ADDFab.html
@@ -72,7 +72,7 @@
 - Exploring and learning ways to examine part performance, mechanical properties and dimensions of printed parts by Nikon CMM, Hardness Tester, Instron ElectroPuls.
       <br>
       <br>
-      This page is under construction. Stay tuned for more projects. 
+        <b>This page is under construction. Stay tuned for more projects.</b> 
       <br>
       <br>
       <img src="./images/asmitjainADDFab2.jpg" alt="Vibration Analysis" class="center">
