--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <a href="Project8.html" target="_self">
         <img src="./images/asmitjainProjects.jpg" class="project-image" alt="Image of my other projects">
         <h3 class="card-title">Other Projects</h3>
-        <p class="card-subtitle">MULTIPLE PROJECTS</p>
+        <p class="card-subtitle">MULTIPLE DOMAINS</p>
       </a>
     </div>
   </div>
