--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
 
   <div class="prjt">
     <div class="sub-project">
+      <a href="ExcelDryer.html" target="_self">
+        <img src="./images/asmitjainADDFabthumbnail.jpeg" class="project-image" alt="ED">
+        <h3 class="card-title">Research & Development Engineer</h3>
+        <p class="card-subtitle">Excel Dryer Inc - Massachusetts</p>
+      </a>
+    </div>
+    <div class="sub-project">
       <a href="ADDFab.html" target="_self">
         <img src="./images/asmitjainADDFabthumbnail.jpg" class="project-image" alt="ADDFab">
         <h3 class="card-title">Additive Manufacturing & Design Engineer</h3>
