--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </a>
     </div>
     <div class="sub-project">
-      <a href="Project8.html" target="_self">
+      <a href="Other Projects.html" target="_self">
         <img src="./images/asmitjainProjects.jpg" class="project-image" alt="Image of my other projects">
         <h3 class="card-title">Other Projects</h3>
         <p class="card-subtitle">MULTIPLE DOMAINS</p>
