--- a/Other Projects.html
+++ b/Other Projects.html
@@ -37,7 +37,7 @@
       <h2> List of other projects: </h2>
     <br>
     <br>
-    <img src="./images/asmitjainP8_1.PNG" alt="BAJA" class="center">
+    <!-- <img src="./images/asmitjainP8_1.PNG" alt="BAJA" class="center"> -->
         <br>
       <p><b><i> Fault detection for metal etch process data using Machine Learning in MATLAB:</i></b>
         <br>
