--- a/ExcelDryer.html
+++ b/ExcelDryer.html
@@ -68,7 +68,7 @@
         <b>This page is under construction. Stay tuned for updates.</b> 
       <br>
       <br>
-      <img src="./images/asmitjainXL_2.jpeg" alt="Vibration Analysis" class="center">
+      <img src="./images/asmitjainXL_2.jpg" alt="Vibration Analysis" class="center">
       <br>
       
       <br>
