--- a/ExcelDryer.html
+++ b/ExcelDryer.html
@@ -40,35 +40,49 @@
         <br>
     <img src="./images/asmitjainXL_1.png" alt="XL Dryer" class="center">
         <br>
+          <br>
+          I have recently started working at Excel Dryer located in East Longmeadow, Massachusetts. 
+          This company manufactures the finest quality hand dryer and hairdryer for commercial places. This enables 95% cost
+          savings and 70% carbon footprint reduction by getting rid of paper towels and switching to our high-speed, 
+          energy-efficient hand dryers.
+<br>
+          <br>
+
+My motivation to work at Excel Dryer is to support the development of highly efficient products which use less energy, 
+          generate cost savings and enhance hygienic outcome at countless facilities. I completely support the company’s 
+          vision to provide high-quality drying solutions and set the standard for restroom sustainability and efficiency. 
+          
+          <br>
+          <br>
       <p><b><i> Roles & Responsibilities:</i></b>
         <br>
         <br>
-        - Colloborating in researching & developing new products with different departments.
+        - Collaborating in research & development of new products with cross-functional team.
         <br>
         <br>
-- Redesigning & modifying existing models based on their performance.
+- Redesigning & modifying existing models based on their performance and evaluation.
         <br>
         <br>
-- Performing different types of testing to evaluate and validate the design.
+- Communicating with vendors and suppliers to develop high-quality parts for mass production.
         <br>
         <br>
-- Working with different suppliers to develop high qauluty parts.
+- Supporting team in documentation and testing for making products compliant and certified with different standards for various countries.
         <br>
         <br>
-- Designing different components and promoting rapid prototying using in-house 3D printing facility.
+- Designing different components and promoting rapid prototyping using in-house 3D printing and conventional machining facilities like bed mill, lathe, drill press, etc.
         <br>
         <br>
-- Responsible for complete documentation of all the existing and new products.
+- Taking responsibility for complete documentation of all the existing and new products.
         <br>
         <br>
 
 
 <br>
       <br>
-        <b>This page is under construction. Stay tuned for updates.</b> 
+        <b>This page is under construction. Stay tuned for more updates.</b> 
       <br>
       <br>
-      <img src="./images/asmitjainXL_2.jpg" alt="Vibration Analysis" class="center">
+      <img src="./images/asmitjainXL_2.jpg" alt="XL2" class="center">
       <br>
       
       <br>
