--- a/ExcelDryer.html
+++ b/ExcelDryer.html
@@ -41,6 +41,9 @@
     <img src="./images/asmitjainXL_1.png" alt="XL Dryer" class="center">
         <br>
           <br>
+          <p><b><i> Overview:</i></b>
+            <br>
+            <br>
           I have recently started working at Excel Dryer located in East Longmeadow, Massachusetts. 
           This company manufactures the finest quality hand dryer and hairdryer for commercial places. This enables 95% cost
           savings and 70% carbon footprint reduction by getting rid of paper towels and switching to our high-speed, 
